# irrigation_system

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  component.mk  define.h  file_system.cpp  file_system.h  gpio_control.cpp  gpio_control.h  http_request.cpp  http_request.h  httpd_server_task.cpp  httpd_server_task.h  irrigation_controller.cpp  irrigation_controller.h  irrigation_interface.h  logger.cpp  logger.h  main.cpp  management_task.cpp  management_task.h  pwm.cpp  pwm.h  relay_task.cpp  relay_task.h  schedule_adjust.cpp  schedule_adjust.h  schedule_base.cpp  schedule_base.h  schedule_dummy.cpp  schedule_dummy.h  schedule_manager.cpp  schedule_manager.h  schedule_watering.cpp  schedule_watering.h  system_queue.cpp  system_queue.h  task.cpp  task.h  util.cpp  util.h  (+16 more)
watering_setting_files/: watering_setting_advanced_example.json  watering_setting_simple_exapmle.json
